Emit QState::finished if parallel QStateMachine states are finished

- it seems isInFinalState(state) always returns false if state has a
StateMachine type and is not being initial.
But such state can be in 'Final' stage, even if it's not initial state.

Task-number: QTBUG-126419
Change-Id: Iff5b8977af1c92e99616ef2693f01d75303a4cc0
Reviewed-by: Jarek Kobus <jaroslaw.kobus@qt.io>
Reviewed-by: Ulf Hermann <ulf.hermann@qt.io>